feat: finalize verify token
