# src/apps/wallet/serializers/card.py
@@ -1,9 +1,0 @@
-from rest_framework import serializers
-
-from src.apps.wallet.models import Card
-
-
-class CreateCardSerializer(serializers.ModelSerializer):
-    class Meta:
-        model = Card
-        fields = ("id", "user", "card_number")
